tests/spec/fail/datetime_format_negative.aja
import (
    "modules/datetime"
)

print(datetime.formatIso(-1))
